<resources>
    <string name="app_name">DSensor Samples</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="axis">Axis</string>
    <string name="axis_x">X:</string>
    <string name="axis_y">Y:</string>
    <string name="axis_z">Z:</string>
    <string name="compass">Compass</string>
    <string name="cos">Cos</string>
    <string name="depreciated_orientation">Depreciated Orientation</string>
    <string name="facing">Facing</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="inclination">Inclination</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="magnetic">Magnetic Field:</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_reverse_landscape">Reverse Landscape</string>
    <string name="orientation_reverse_portrait">Reverse Portrait</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="rotation">Rotation</string>
    <string name="rotation_vector">Rotation vector</string>

    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>

    <string name="error_no_accelerometer_sensor">Fail to start. The required accelerometer sensor is not available on this device</string>
    <string name="error_no_magnetic_field_sensor">Fail to start. The required magnetic field sensor is not available on this device</string>

    <string name="title_activity_compass">Compass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
