<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_device_orientation"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/orientation"
        android:icon="@mipmap/ic_screen_rotation_white_24dp" >
        <menu>
            <item
                android:id="@+id/action_portrait"
                android:title="@string/orientation_portrait" />
            <item
                android:id="@+id/action_landscape"
                android:title="@string/orientation_landscape" />
            <item
                android:id="@+id/action_reverse_portrait"
                android:title="@string/orientation_reverse_portrait" />
            <item
                android:id="@+id/action_reverse_landscape"
                android:title="@string/orientation_reverse_landscape" />
        </menu>
    </item>

</menu>